<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/carrierRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/att_carrier_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/att" />

        <RadioButton
            android:id="@+id/spr_carrier_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spr" />

        <RadioButton
            android:id="@+id/tmo_carrier_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmo" />

        <RadioButton
            android:id="@+id/vzw_carrier_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vzw" />
    </RadioGroup>

    <Button
        android:id="@+id/device_save_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>